<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CadEquipamento"
    android:id="@+id/CadEquip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome"
        android:id="@+id/tv_nome_equip"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_nome_equip"
        android:layout_below="@+id/tv_nome_equip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/descricao"
            android:id="@+id/tv_descricao_equip"
            android:layout_below="@+id/et_nome_equip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_descricao_equip"
            android:layout_below="@+id/tv_descricao_equip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/et_nome_equip"
            android:layout_alignEnd="@+id/et_nome_equip"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/status"
                android:id="@+id/tv_status_equip"
                android:layout_below="@+id/et_descricao_equip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_status_equip"
                android:layout_below="@+id/tv_status_equip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/et_descricao_equip"
                android:layout_alignEnd="@+id/et_descricao_equip" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/marca"
                android:id="@+id/tv_marca_equip"
                android:layout_below="@+id/et_status_equip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_marca_equip"
                android:layout_below="@+id/tv_marca_equip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/et_status_equip"
                android:layout_alignEnd="@+id/et_status_equip" />




                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Atualizar"
                    android:id="@+id/button_Cad_Equip"
                    android:layout_below="@+id/et_marca_equip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="72dp"
                    android:layout_alignRight="@+id/et_status_equip"
                    android:layout_alignEnd="@+id/et_status_equip"
                    />




</RelativeLayout>
